--- a/Part.1.E.5.strings.ipynb
+++ b/Part.1.E.5.strings.ipynb
@@ -287,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -296,7 +296,7 @@
        "3"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -306,7 +306,7 @@
        "3.0"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -316,7 +316,17 @@
        "'3.1415926'"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -328,7 +338,7 @@
     "int('3')\n",
     "float('3')\n",
     "str(3.1415926)\n",
-    "# int('3.1415926') # 这一行会报错"
+    "int(3.1415926) # 这一行会报错"
    ]
   },
   {
@@ -342,31 +352,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "Please tell me your age:  19\n"
+      "Please tell me your age:  1\n"
      ]
     },
     {
-     "ename": "TypeError",
-     "evalue": "'<' not supported between instances of 'str' and 'int'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-9-0573fe379e83>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mage\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0minput\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Please tell me your age: '\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0;32mif\u001b[0m \u001b[0mage\u001b[0m \u001b[0;34m<\u001b[0m \u001b[0;36m18\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'I can not sell you drinks...'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Have a nice drink!'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mTypeError\u001b[0m: '<' not supported between instances of 'str' and 'int'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "I can not sell you drinks...\n"
      ]
     }
    ],
    "source": [
     "age = input('Please tell me your age: ')\n",
-    "if age < 18:\n",
+    "if int(age) < 18:\n",
     "    print('I can not sell you drinks...')\n",
     "else:\n",
     "    print('Have a nice drink!')"
@@ -749,7 +755,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -761,14 +767,17 @@
       "2 t\n",
       "3 h\n",
       "4 o\n",
-      "5 n\n"
+      "5 n\n",
+      "range(-1, -7, -1)\n"
      ]
     }
    ],
    "source": [
     "s = 'Python'\n",
     "for char in s:\n",
-    "    print(s.index(char), char)"
+    "    print(s.index(char), char)\n",
+    "    \n",
+    "print(range(-1, -7, -1))"
    ]
   },
   {
@@ -780,13 +789,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "n\n",
+      "o\n",
+      "h\n",
+      "t\n",
+      "y\n",
+      "P\n",
       "P\n",
       "y\n",
       "t\n",
@@ -798,7 +813,7 @@
    ],
    "source": [
     "s = 'Python'\n",
-    "for i in range(len(s)):\n",
+    "for i in range(5, -1, -1):\n",
     "    print(s[i])\n",
     "\n",
     "#上面的代码仅是为了演示索引操作符的使用，更简洁的写法是：\n",
@@ -1385,16 +1400,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "4"
+       "0"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1404,7 +1419,7 @@
        "3"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1414,7 +1429,7 @@
        "1"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1425,7 +1440,7 @@
     "\n",
     "s = \"\"\"Simple is better than complex.\n",
     "Complex is better than complicated.\"\"\"\n",
-    "s.lower().count('mp')\n",
+    "s.lower().count('sg')\n",
     "s.lower().count('mp', 10)\n",
     "s.lower().count('mp', 10, 30)"
    ]
@@ -1774,10 +1789,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 14,
    "metadata": {
     "button": false,
-    "collapsed": true,
     "new_sheet": false,
     "run_control": {
      "read_only": false
@@ -1790,7 +1804,7 @@
        "'\\r \\t Simple is better than complex.    \\t \\n'"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1800,7 +1814,7 @@
        "'Simple is better than complex.'"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1876,10 +1890,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 17,
    "metadata": {
     "button": false,
-    "collapsed": true,
     "new_sheet": false,
     "run_control": {
      "read_only": false
@@ -1892,17 +1905,17 @@
        "'Simple is better than complex.'"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     },
     {
      "data": {
       "text/plain": [
-       "'mple is better than complex.'"
+       "'le is better than complex.'"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1912,7 +1925,7 @@
        "' is better than complex.'"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1924,7 +1937,7 @@
     "# str.lstrip([chars])\n",
     "s = \"Simple is better than complex.\"\n",
     "s\n",
-    "s.lstrip('Six.p')    # p 全部处理完之后，p 并不在首部，所以原字符串中的 p 字母不受影响；\n",
+    "s.lstrip('Six.pm')    # p 全部处理完之后，p 并不在首部，所以原字符串中的 p 字母不受影响；\n",
     "s.lstrip('pSix.mle') # 这一次，首部的 p 被处理了…… 参数中的字符顺序对结果没有影响，换成 Sipx.mle 也一样……"
    ]
   },
@@ -1933,7 +1946,6 @@
    "execution_count": 38,
    "metadata": {
     "button": false,
-    "collapsed": true,
     "new_sheet": false,
     "run_control": {
      "read_only": false
@@ -2249,8 +2261,7 @@
     "new_sheet": false,
     "run_control": {
      "read_only": false
-    },
-    "scrolled": false
+    }
    },
    "outputs": [
     {
@@ -2412,7 +2423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -2421,7 +2432,7 @@
        "'John is 25 years old.'"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -2431,7 +2442,7 @@
        "'Are you John? :-{+}'"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -2441,7 +2452,7 @@
        "'John is a grown up? True'"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2746,10 +2757,10 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.7.6"
   },
   "toc-autonumbering": true
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
