--- a/Part.1.E.2.values-and-their-operators.ipynb
+++ b/Part.1.E.2.values-and-their-operators.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -41,6 +41,10 @@
     }
    ],
    "source": [
+    "'''\n",
+    "    这是注释\n",
+    "'''\n",
+    "\n",
     "def is_prime(n):            # 定义 is_prime()，接收一个参数\n",
     "    if n < 2:              # 开始使用接收到的那个参数（值）开始计算……\n",
     "        return False       # 不再是返回给人，而是返回给调用它的代码……\n",
@@ -481,6 +485,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"rang'wo'kang'k\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -538,7 +551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -547,7 +560,7 @@
        "'AwesomePython'"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -557,7 +570,7 @@
        "'AwesomePython'"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -567,17 +580,17 @@
        "'Python, Awesome! Awesome! Awesome! '"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     },
     {
      "data": {
       "text/plain": [
-       "False"
+       "True"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -589,7 +602,7 @@
     "'Awesome' + 'Python'\n",
     "'Awesome' 'Python'\n",
     "'Python, ' + 'Awesome! ' * 3\n",
-    "'o' in 'Awesome' and 'o' not in 'Python'"
+    "'ome' in 'Awesome'"
    ]
   },
   {
@@ -1131,9 +1144,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
