--- a/Part.1.E.6.containers.ipynb
+++ b/Part.1.E.6.containers.ipynb
@@ -1163,16 +1163,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "dict"
+       "set"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1182,7 +1182,7 @@
        "set"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1191,7 +1191,7 @@
     "from IPython.core.interactiveshell import InteractiveShell\n",
     "InteractiveShell.ast_node_interactivity = \"all\"\n",
     "\n",
-    "a = {} # 注意这样创建的是一个 dict（字典），而不是 set 集合\n",
+    "a = {'a', 'b'} # 注意这样创建的是一个 dict（字典），而不是 set 集合\n",
     "b = set() # 这样创建的才是空集合\n",
     "type(a)\n",
     "type(b)"
@@ -1334,7 +1334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -1343,7 +1343,7 @@
        "{'Joker', 'Moose'}"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1353,7 +1353,7 @@
        "True"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1363,7 +1363,7 @@
        "False"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1373,7 +1373,7 @@
        "{'Ann', 'Chris', 'Jane', 'Joker', 'Moose', 'Zero'}"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1383,7 +1383,7 @@
        "{'Moose'}"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1393,7 +1393,7 @@
        "{'Joker'}"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1403,7 +1403,17 @@
        "{'Ann', 'Chris', 'Jane', 'Joker', 'Zero'}"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'Chris', 'Jane', 'Moose', 'Zero'}"
+      ]
+     },
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1418,7 +1428,9 @@
     "admins | moderators    # admins、moderator，或者身兼两职的，即，两个角色中的所有人 in admins or moderators or both\n",
     "admins & moderators    # 既是 admins 又是 moderator 的都有谁？in both admins and moderators\n",
     "admins - moderators    # 是 admins 但不是 moderator 的都有谁？in admins but not in moderators\n",
-    "admins ^ moderators    # admins 和 moderator 中不是身兼两职的都有谁？in admins or moderator but not both"
+    "admins ^ moderators    # admins 和 moderator 中不是身兼两职的都有谁？in admins or moderator but not both\n",
+    "moderators.remove('Ann')\n",
+    "moderators"
    ]
   },
   {
