第二部分各章总结

--- a/Part.2.D.3-lambda.ipynb
+++ b/Part.2.D.3-lambda.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -34,7 +34,7 @@
        "<function __main__._is_leap(year)>"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -44,37 +44,27 @@
        "True"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     },
     {
      "data": {
       "text/plain": [
-       "4547071648"
+       "2202871385256"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     },
     {
      "data": {
       "text/plain": [
-       "4547071648"
+       "2202871385256"
       ]
      },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "function"
-      ]
-     },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -84,7 +74,17 @@
        "function"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "function"
+      ]
+     },
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -385,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -394,17 +394,7 @@
        "[2, 4, 6, 8, 10, 12]"
       ]
      },
-     "execution_count": 35,
-     "metadata": {},
-     "output_type": "execute_result"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "[2, 4, 6, 8, 10, 12]"
-      ]
-     },
-     "execution_count": 35,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -431,39 +421,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[{'name': 'john', 'phone': 9876},\n",
-       " {'name': 'mike', 'phone': 5603},\n",
-       " {'name': 'stan', 'phone': 6898},\n",
-       " {'name': 'eric', 'phone': 7898}]"
-      ]
-     },
-     "execution_count": 60,
-     "metadata": {},
-     "output_type": "execute_result"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "['john', 'mike', 'stan', 'eric']"
-      ]
-     },
-     "execution_count": 60,
-     "metadata": {},
-     "output_type": "execute_result"
-    },
     {
      "data": {
       "text/plain": [
        "[9876, 5603, 6898, 7898]"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -548,9 +515,16 @@
    ],
    "source": [
     "pairs = [(1, 'one'), (2, 'two'), (3, 'three'), (4, 'four')]\n",
-    "pairs.sort(key=lambda p: p[1])\n",
+    "pairs.sort(key=lambda p: p[1].upper())\n",
     "pairs"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -569,9 +543,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
