--- a/Part.2.E.deliberate-thinking.ipynb
+++ b/Part.2.E.deliberate-thinking.ipynb
@@ -31,7 +31,7 @@
     "\n",
     "这也怪我们的应试教育，大学前上 12 年学，“学”（更多是被逼的）的绝大多数东西，只有一个能够切实体会到的用处，考试 —— 中考、高考，以及以它们为目标的无数 “模考”…… 于是，反过来，不管学什么东西，除了考试之外，几乎无法想象其他的用处。\n",
     "\n",
-    "一旦我们启动了对某项技能的自学之后，在那过程中，最具价值的刻意思考就是，时时刻刻琢磨 “这东西能用在哪儿呢？”\n",
+    "**一旦我们启动了对某项技能的自学之后，在那过程中，最具价值的刻意思考就是，时时刻刻琢磨 “这东西能用在哪儿呢？”**\n",
     "\n",
     "比如，当你看到字符串的 Methods 中有一个 `str.zfill()` 的时候，马上就能想到，“嗯！这可以用来批量更名文件……”\n",
     "\n",
@@ -59,6 +59,11 @@
    ]
   },
   {
+   "attachments": {
+    "MoSCoW Method.url": {
+     "undefined": "W0ludGVybmV0U2hvcnRjdXRdDQpVUkw9aHR0cHM6Ly9lbi53aWtpcGVkaWEub3JnL3dpa2kvTW9TQ29XX21ldGhvZA0K"
+    }
+   },
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -97,8 +102,15 @@
     "\n",
     "在写书这事上，我总是给人感觉很快，事实上也是，因为有方法论 —— 但显然，那方法论不是从某一本 “如何写书” 的书里获得的，而是从另外一个看起来完全不相关的领域里习得后琢磨到的……\n",
     "\n",
-    "所谓的 “活学活用”，所谓的 “触类旁通”，也不过如此。"
+    "所谓的 “活学活用”，所谓的 “触类旁通”，也不过如此。![MoSCoW Method.url](attachment:MoSCoW Method.url)![MoSCoW Method.url](attachment:MoSCoW Method.url)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -117,9 +129,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
