--- a/Part.2.D.4-recursion.ipynb
+++ b/Part.2.D.4-recursion.ipynb
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -213,11 +213,14 @@
       "dead: False kicked: False\n",
       "dead: False kicked: False\n",
       "dead: False kicked: False\n",
-      "dead: False kicked: False\n",
-      "dead: False kicked: False\n",
-      "dead: True kicked: True\n",
-      "I slept 8 days, and was dead to wake up...\n",
-      "The in_dream() function returns: 8\n"
+      "dead: False kicked: True\n",
+      "I slept 6 days, and was kicked to wake up...\n",
+      "6\n",
+      "6\n",
+      "6\n",
+      "6\n",
+      "6\n",
+      "The in_dream() function returns: 6\n"
      ]
     }
    ],
@@ -237,7 +240,9 @@
     "        print(f\"I slept {day} days, and was kicked to wake up...\")\n",
     "        return day\n",
     "    \n",
-    "    return in_dream(day)\n",
+    "    k = in_dream(day)\n",
+    "    print(k)\n",
+    "    return k\n",
     "    \n",
     "print('The in_dream() function returns:', in_dream())"
    ]
@@ -514,7 +519,7 @@
    "source": [
     "刚开始的时候，初学者好不容易搞明白递归函数究竟是怎么回事之后，就不由自主地想 “我如何才能学会递归式思考呢？” —— 其实吧，这种想法本身可能并不是太正确或者准确。\n",
     "\n",
-    "准确地讲，递归是一种解决问题的方式。当我们需要解决的问题，可以被逐步拆分成很多越来越小的模块，然后每个小模块还都能用同一种算法处理的时候，用递归函数最简洁有效。所以，只不过是在遇到可以用递归函数解决问题的时候，才需要去写递归函数。\n",
+    "准确地讲，递归是一种解决问题的方式。当我们需要解决的问题，可以被逐步拆分成很多越来越小的模块，然后每个小模块还都能用同一种算法处理的时候，用递归函数最简洁有效。**所以，只不过是在遇到可以用递归函数解决问题的时候，才需要去写递归函数**。\n",
     "\n",
     "从这个意义上来看，递归函数是程序员为了自己方便而使用的，并不是为了计算机方便而使用 —— 计算机么，你给它的任务多一点或者少一点，对它来讲无所谓，反正有电就能运转，它自己又不付电费……\n",
     "\n",
@@ -607,9 +612,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
