--- a/Part.2.D.6-modules.ipynb
+++ b/Part.2.D.6-modules.ipynb
@@ -30,18 +30,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "# %load mycode.py\n",
-    "# 当前这个 Code Cell 中的代码，保存在当前文件夹中的 mycode.py 文件中\n",
-    "# 以下的代码，是使用 Jupyter 命令 %load mycode.py 导入到当前 Code Cell 中的：\n",
-    "\n",
     "def is_prime(n):\n",
     "    \"\"\"\n",
     "    Return a boolean value based upon\n",
-    "    whether the argument n is a prime number.\n",
+    "    whether the argument n is a prime number.1\n",
     "    \"\"\"\n",
     "    if n < 2:\n",
     "        return False\n",
@@ -58,7 +55,7 @@
     "    Print a string, with a greeting to everyone.\n",
     "    :param *names: tuple of names to be greeted.\n",
     "    :param greeting: 'Hello' as default.\n",
-    "    :param capitalized: Whether name should be converted to capitalized before print. False as default.\n",
+    "    :param capitalized: Whether name should be converted to capitalzed before print. False as default.\n",
     "    :returns: None\n",
     "    \"\"\"\n",
     "    for name in names:\n",
@@ -76,9 +73,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0.5403023058681398-0j)"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -87,7 +94,7 @@
       "\n",
       "is_prime(n)\n",
       "    Return a boolean value based upon\n",
-      "    whether the argument n is a prime number.\n",
+      "    whether the argument n is a prime number.1\n",
       "\n",
       "Help on function say_hi in module mycode:\n",
       "\n",
@@ -97,11 +104,33 @@
       "    :param greeting: 'Hello' as default.\n",
       "    :param capitalized: Whether name should be converted to capitalzed before print. False as default.\n",
       "    :returns: None\n",
-      "\n",
-      "'mycode'\n",
-      "\n",
-      "True\n",
-      "\n",
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'__main__'"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "Hello, mike!\n",
       "Hello, zoe!\n"
      ]
@@ -111,12 +140,12 @@
     "from IPython.core.interactiveshell import InteractiveShell\n",
     "InteractiveShell.ast_node_interactivity = \"all\"\n",
     "\n",
-    "import mycode\n",
     "\n",
+    "cos(1)\n",
     "help(mycode.is_prime)\n",
     "help(mycode.say_hi)\n",
     "\n",
-    "mycode.__name__\n",
+    "__name__\n",
     "mycode.is_prime(3)\n",
     "mycode.say_hi('mike', 'zoe')"
    ]
@@ -149,12 +178,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['D:\\\\github_local\\\\the-craft-of-selfteaching',\n",
+       " 'D:\\\\K-on Program\\\\anaconda3\\\\python37.zip',\n",
+       " 'D:\\\\K-on Program\\\\anaconda3\\\\DLLs',\n",
+       " 'D:\\\\K-on Program\\\\anaconda3\\\\lib',\n",
+       " 'D:\\\\K-on Program\\\\anaconda3',\n",
+       " '',\n",
+       " 'D:\\\\K-on Program\\\\anaconda3\\\\lib\\\\site-packages',\n",
+       " 'D:\\\\K-on Program\\\\anaconda3\\\\lib\\\\site-packages\\\\win32',\n",
+       " 'D:\\\\K-on Program\\\\anaconda3\\\\lib\\\\site-packages\\\\win32\\\\lib',\n",
+       " 'D:\\\\K-on Program\\\\anaconda3\\\\lib\\\\site-packages\\\\Pythonwin',\n",
+       " 'D:\\\\K-on Program\\\\anaconda3\\\\lib\\\\site-packages\\\\IPython\\\\extensions',\n",
+       " 'C:\\\\Users\\\\K-on\\\\.ipython']"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "import sys\n",
-    "sys.path"
+    "\n",
+    "path"
    ]
   },
   {
@@ -188,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 34,
    "metadata": {
     "scrolled": true
    },
@@ -196,40 +247,84 @@
     {
      "data": {
       "text/plain": [
+       "(0.8414709848078965+0j)"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "text/plain": [
        "('_abc',\n",
        " '_ast',\n",
+       " '_bisect',\n",
+       " '_blake2',\n",
        " '_codecs',\n",
+       " '_codecs_cn',\n",
+       " '_codecs_hk',\n",
+       " '_codecs_iso2022',\n",
+       " '_codecs_jp',\n",
+       " '_codecs_kr',\n",
+       " '_codecs_tw',\n",
        " '_collections',\n",
+       " '_contextvars',\n",
+       " '_csv',\n",
+       " '_datetime',\n",
        " '_functools',\n",
+       " '_heapq',\n",
        " '_imp',\n",
        " '_io',\n",
+       " '_json',\n",
        " '_locale',\n",
+       " '_lsprof',\n",
+       " '_md5',\n",
+       " '_multibytecodec',\n",
+       " '_opcode',\n",
        " '_operator',\n",
+       " '_pickle',\n",
+       " '_random',\n",
+       " '_sha1',\n",
+       " '_sha256',\n",
+       " '_sha3',\n",
+       " '_sha512',\n",
        " '_signal',\n",
        " '_sre',\n",
        " '_stat',\n",
        " '_string',\n",
+       " '_struct',\n",
        " '_symtable',\n",
        " '_thread',\n",
        " '_tracemalloc',\n",
        " '_warnings',\n",
        " '_weakref',\n",
+       " '_winapi',\n",
+       " 'array',\n",
        " 'atexit',\n",
+       " 'audioop',\n",
+       " 'binascii',\n",
        " 'builtins',\n",
+       " 'cmath',\n",
        " 'errno',\n",
        " 'faulthandler',\n",
        " 'gc',\n",
        " 'itertools',\n",
        " 'marshal',\n",
-       " 'posix',\n",
-       " 'pwd',\n",
+       " 'math',\n",
+       " 'mmap',\n",
+       " 'msvcrt',\n",
+       " 'nt',\n",
+       " 'parser',\n",
        " 'sys',\n",
        " 'time',\n",
+       " 'winreg',\n",
        " 'xxsubtype',\n",
-       " 'zipimport')"
+       " 'zipimport',\n",
+       " 'zlib')"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -239,17 +334,17 @@
        "True"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     },
     {
      "data": {
       "text/plain": [
-       "False"
+       "True"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -257,11 +352,12 @@
    "source": [
     "from IPython.core.interactiveshell import InteractiveShell\n",
     "InteractiveShell.ast_node_interactivity = \"all\"\n",
-    "import sys\n",
     "\n",
+    "\n",
+    "sin(1)\n",
     "sys.builtin_module_names\n",
-    "\"_sre\" in sys.builtin_module_names # True\n",
-    "\"math\" in sys.builtin_module_names # False （根据自己电脑库的安装情况，结果会有不同）"
+    "\"_sre\" in builtin_module_names # True\n",
+    "\"math\" in builtin_module_names # False （根据自己电脑库的安装情况，结果会有不同）"
    ]
   },
   {
@@ -454,7 +550,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -498,9 +594,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The Zen of Python, by Tim Peters\n",
+      "Beautiful is better than ugly.\n",
+      "Explicit is better than implicit.\n",
+      "Simple is better than complex.\n",
+      "Complex is better than complicated.\n",
+      "Flat is better than nested.\n",
+      "Sparse is better than dense.\n",
+      "Readability counts.\n",
+      "Special cases aren't special enough to break the rules.\n",
+      "Although practicality beats purity.\n",
+      "Errors should never pass silently.\n",
+      "Unless explicitly silenced.\n",
+      "In the face of ambiguity, refuse the temptation to guess.\n",
+      "There should be one-- and preferably only one --obvious way to do it.\n",
+      "Although that way may not be obvious at first unless you're Dutch.\n",
+      "Now is better than never.\n",
+      "Although never is often better than *right* now.\n",
+      "If the implementation is hard to explain, it's a bad idea.\n",
+      "If the implementation is easy to explain, it may be a good idea.\n",
+      "Namespaces are one honking great idea -- let's do more of those!\n"
+     ]
+    }
+   ],
    "source": [
     "s = \"\"\"Gur Mra bs Clguba, ol Gvz Crgref\n",
     "Ornhgvshy vf orggre guna htyl.\n",
@@ -698,9 +821,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
