--- a/Part.3.B.3.decorator-iterator-generator.ipynb
+++ b/Part.3.B.3.decorator-iterator-generator.ipynb
@@ -218,48 +218,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "11"
-      ]
-     },
-     "execution_count": 85,
-     "metadata": {},
-     "output_type": "execute_result"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "12"
-      ]
-     },
-     "execution_count": 85,
-     "metadata": {},
-     "output_type": "execute_result"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "13"
-      ]
-     },
-     "execution_count": 85,
-     "metadata": {},
-     "output_type": "execute_result"
-    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "101\n",
-      "102\n",
-      "103\n",
-      "104\n",
-      "105\n"
+      "101, 102, 103, 104, 105, "
      ]
     },
     {
@@ -268,7 +234,7 @@
        "type"
       ]
      },
-     "execution_count": 85,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -372,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -420,14 +386,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<generator object <genexpr> at 0x107cc0048>\n",
+      "{0, 2, 4, 6, 8}\n",
       "0\n",
       "2\n",
       "4\n",
@@ -437,7 +403,7 @@
     }
    ],
    "source": [
-    "even = (e for e in range(10) if not e % 2)\n",
+    "even = {e for e in range(10) if not e % 2}\n",
     "# odd = (o for o in range(10) if o % 2)\n",
     "print(even)\n",
     "for e in even:\n",
@@ -794,7 +760,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -888,7 +854,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1030,16 +996,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Trace: You've called a function: say_hi(), with args: ('Hello',); kwargs: {'name': 'Jack'}\n",
-      "Trace: say_hi('Hello',) returned: Hello! Jack.\n",
-      "Hello! Jack.\n"
+      "Trace: You've called a function: say_hi(), with args: ('Hello', 'a', 'b', 'c'); kwargs: {}\n",
+      "Trace: say_hi('Hello', 'a', 'b', 'c') returned: Hello! a and b and c.\n",
+      "Hello! a and b and c.\n"
      ]
     }
    ],
@@ -1055,10 +1021,17 @@
     "    return wrapper\n",
     "\n",
     "@trace\n",
-    "def say_hi(greeting, name=None):\n",
-    "    return greeting + '! ' + name + '.'\n",
+    "def say_hi(greeting, *names):\n",
+    "    str = ''\n",
+    "    for name in names:\n",
+    "        if names[len(names) - 1] == name:\n",
+    "            str += name\n",
+    "        else:\n",
+    "            str += name + ' and '\n",
+    "        \n",
+    "    return greeting + '! ' + str + '.'\n",
     "\n",
-    "print(say_hi('Hello', name = 'Jack'))"
+    "print(say_hi('Hello', 'a', 'b', 'c'))"
    ]
   },
   {
@@ -1109,10 +1082,10 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.7.6"
   },
   "toc-autonumbering": true
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
