--- a/Part.3.C.breaking-good-and-bad.ipynb
+++ b/Part.3.C.breaking-good-and-bad.ipynb
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -72,10 +72,10 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x1031a5400>"
+       "<IPython.lib.display.IFrame at 0x2c2f338f2c8>"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -177,7 +177,7 @@
     "\n",
     "—— 并且，这话重复多少遍都不过分。\n",
     "\n",
-    "大多数人不太在意自己脑中的概念之间的关系，因为平日里这也不怎么耽误事。但一旦遇到复杂一点的知识体系，就完全搞不定了…… 而所谓知识体系的复杂，无非就是新的概念多一些，概念之间的关联更复杂一些…… 而概念之间的关联更复杂一些，无非是各个概念之间不仅只有一种联系，最后会形成网状连接……\n",
+    "大多数人不太在意自己脑中的概念之间的关系，因为平日里这也不怎么耽误事。但一旦遇到复杂一点的知识体系，就完全搞不定了…… **而所谓知识体系的复杂，无非就是新的概念多一些，概念之间的关联更复杂一些…… 而概念之间的关联更复杂一些，无非是各个概念之间不仅只有一种联系，最后会形成网状连接……**\n",
     "\n",
     "—— 在《通往财富自由之路》那本书里，我几乎用了整本书的篇幅去讲解、厘清概念及其之间关系的重要性。\n",
     "\n",
@@ -185,7 +185,7 @@
     "\n",
     "可问题在于，脑子里概念关联一团糟的人，自己并不觉得，甚至无法知道 —— 他们是那种[跟你一块去看一场电影却能看到另外一部电影的人](Part.1.C.must.learn.sth.only.by.reading.ipynb)。说他们理解能力差过分吗？他们不能理解被评价为理解能力差，难道不是很自然吗？\n",
     "\n",
-    "分清概念的方法是什么？其实也不难，就是不断拆解，不断主动整理。每次用图表整理那些概念的时候，就会发现比原来更清晰一些，多次整理，最终就谙熟于心了。\n",
+    "**分清概念的方法是什么？其实也不难，就是不断拆解，不断主动整理。每次用图表整理那些概念的时候，就会发现比原来更清晰一些，多次整理，最终就谙熟于心了。**\n",
     "\n",
     "想要再举更恰当更惊人的例子很难，勉为其难再举个例子。\n",
     "\n",
@@ -201,7 +201,7 @@
     "> \n",
     "> 最后，即便在比特币横空出世的七年后（2017），也很少有人意识到比特币（或者 BTC）其实也可以被理解为这家叫做比特币的去中心化的世界银行的股票。\n",
     "\n",
-    "—— 这无非就是把一个概念拆分成若干个层面再对每个层面准确理解而已。\n",
+    "—— **这无非就是把一个概念拆分成若干个层面再对每个层面准确理解而已。**\n",
     "\n",
     "但毫无疑问，这点靠很简单很简单的方法练就的理解能力，帮了我大忙。"
    ]
@@ -275,9 +275,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
