--- a/Q.good-communication.ipynb
+++ b/Q.good-communication.ipynb
@@ -228,7 +228,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x10a2272b0>"
+       "<IPython.lib.display.IFrame at 0x1a1467e8a08>"
       ]
      },
      "execution_count": 1,
@@ -280,7 +280,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x10a227710>"
+       "<IPython.lib.display.IFrame at 0x1a14680ad08>"
       ]
      },
      "execution_count": 2,
@@ -350,7 +350,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x10a2276a0>"
+       "<IPython.lib.display.IFrame at 0x1a14681a388>"
       ]
      },
      "execution_count": 3,
@@ -456,9 +456,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
